Reformatering af layouts

--- a/app/src/main/res/layout/activity_vaelg_rolle.xml
+++ b/app/src/main/res/layout/activity_vaelg_rolle.xml
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/VaelgRolle_Titel"
         android:textAlignment="center"
@@ -39,11 +38,11 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clInstruktor"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/constraint_border"
             android:elevation="2dp"
@@ -89,9 +88,9 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clInsufflator"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
