--- a/app/src/main/res/layout/scenarie_liste_layout.xml
+++ b/app/src/main/res/layout/scenarie_liste_layout.xml
@@ -17,8 +17,10 @@
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="@+id/knap_rediger_scenarie"
         app:layout_constraintEnd_toStartOf="@+id/knap_rediger_scenarie"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/knap_rediger_scenarie" />
+        app:layout_constraintTop_toTopOf="@+id/knap_rediger_scenarie"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/knap_rediger_scenarie"
@@ -31,7 +33,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
         app:layout_constraintBottom_toBottomOf="@+id/knap_slet_scenarie"
         app:layout_constraintEnd_toStartOf="@+id/knap_slet_scenarie"
-        app:layout_constraintTop_toTopOf="@+id/knap_slet_scenarie" />
+        app:layout_constraintTop_toTopOf="@+id/knap_slet_scenarie"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/knap_slet_scenarie"
@@ -39,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="32dp"
         android:background="@color/colorRed"
         android:text="@string/slet"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
