--- a/app/src/main/res/layout/activity_elev_insufflator.xml
+++ b/app/src/main/res/layout/activity_elev_insufflator.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
         android:background="@drawable/constraint_border"
 
-        <ImageView
+        <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.LEDView
             android:id="@+id/tubeblokeretLed"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -24,8 +24,7 @@
             app:layout_constraintBottom_toBottomOf="@id/tubeblokeretTekst"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/tubeblokeretTekst"
-            app:layout_constraintTop_toTopOf="@id/tubeblokeretTekst"
-            app:srcCompat="@drawable/led" />
+            app:layout_constraintTop_toTopOf="@id/tubeblokeretTekst" />
 
         <TextView
             android:id="@+id/tubeblokeretTekst"
@@ -45,7 +44,7 @@
             app:layout_constraintEnd_toStartOf="@+id/tubeblokeretLed"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.LEDView
             android:id="@+id/overtrykLed"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -53,8 +52,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/overtrykTekst"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/overtrykTekst"
-            app:layout_constraintTop_toTopOf="@+id/overtrykTekst"
-            app:srcCompat="@drawable/led" />
+            app:layout_constraintTop_toTopOf="@+id/overtrykTekst" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -95,9 +93,9 @@
                 android:id="@+id/gasforsyningMeter"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="64dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="64dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/clGasforsyningKnapper"
                 app:layout_constraintEnd_toEndOf="parent"
