--- a/app/src/main/res/layout/activity_elev_insufflator.xml
+++ b/app/src/main/res/layout/activity_elev_insufflator.xml
@@ -396,7 +396,7 @@
                 app:layout_constraintStart_toStartOf="parent">
 
                 <ImageButton
-                    android:id="@+id/resetKnap"
+                    android:id="@+id/resetVolumenKnap"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:background="@null"
