--- a/app/src/main/res/layout/activity_elev_insufflator.xml
+++ b/app/src/main/res/layout/activity_elev_insufflator.xml
@@ -91,18 +91,16 @@
 
             <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
                 android:id="@+id/gasforsyningMeter"
-                android:layout_width="0dp"
+                android:layout_width="16dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="64dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="64dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/clGasforsyningKnapper"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/gasforsyningTitel"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/gasforsyningTitel" />
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/clGasforsyningKnapper"
@@ -230,11 +228,11 @@
 
             <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
                 android:id="@+id/flowrateMeter"
-                android:layout_width="0dp"
+                android:layout_width="16dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/clFlowrateKnapper"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -279,11 +277,11 @@
 
             <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
                 android:id="@+id/trykMeter"
-                android:layout_width="0dp"
+                android:layout_width="16dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/clTrykKnapper"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -372,11 +370,11 @@
 
             <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
                 android:id="@+id/volumenMeter"
-                android:layout_width="0dp"
+                android:layout_width="16dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/clVolumenKnapper"
                 app:layout_constraintEnd_toEndOf="parent"
