Tilføj målværdifelter og lidt farve til insufflator layout
Signed-off-by: petertbdtu <s175210@student.dtu.dk>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="colorRed">#F15050</color>
     <color name="colorPrimaryDark">#330022</color>
     <color name="colorAccent">#331144</color>
+    <color name="colorDisplayBackground">#303030</color>
+    <color name="colorDisplayGreen">#11DD11</color>
+    <color name="colorDisplayRed">#DD1111</color>
 </resources>
