--- a/app/src/main/res/layout/activity_elev_insufflator.xml
+++ b/app/src/main/res/layout/activity_elev_insufflator.xml
@@ -14,7 +14,6 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        android:background="@drawable/constraint_border"
 
         <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.LEDView
             android:id="@+id/tubeblokeretLed"
@@ -106,10 +105,10 @@
                 android:id="@+id/clGasforsyningKnapper"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
                 android:background="@drawable/constraint_border"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent">
 
 
@@ -126,7 +125,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/stopKnap"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@mipmap/ic_start_round" />
 
                 <ImageView
@@ -157,8 +155,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clVolumen"
             app:layout_constraintStart_toEndOf="@+id/clTryk"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/flowrateTitel"
@@ -176,8 +173,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif"
+                android:background="@color/colorDisplayBackground"
+                android:paddingStart="@dimen/displayPadding"
+                android:paddingEnd="@dimen/displayPadding"
                 android:text="00"
+                android:textColor="@color/colorDisplayRed"
                 android:textSize="36sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -207,7 +207,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/decFlowrateKnap"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_expand_less_black_128dp" />
 
                 <ImageView
@@ -234,10 +233,25 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/clFlowrateKnapper"
+                app:layout_constraintBottom_toTopOf="@+id/flowrateMaalDisplay"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/flowrateDisplay" />
+
+            <TextView
+                android:id="@+id/flowrateMaalDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:background="@color/colorDisplayBackground"
+                android:paddingStart="@dimen/displayPadding"
+                android:paddingEnd="@dimen/displayPadding"
+                android:text="00"
+                android:textColor="@color/colorDisplayGreen"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/clFlowrateKnapper"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -249,8 +263,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clFlowrate"
             app:layout_constraintStart_toEndOf="@+id/clGasforsyning"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/trykTitel"
@@ -268,8 +281,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="@color/colorDisplayBackground"
+                android:paddingStart="@dimen/displayPadding"
+                android:paddingEnd="@dimen/displayPadding"
                 android:text="00"
                 android:textAlignment="center"
+                android:textColor="@color/colorDisplayRed"
                 android:textSize="36sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -283,7 +300,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/clTrykKnapper"
+                app:layout_constraintBottom_toTopOf="@+id/trykMaalDisplay"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/trykDisplay" />
@@ -313,7 +330,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/decTrykKnap"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_expand_less_black_128dp" />
 
                 <ImageView
@@ -331,6 +347,21 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_expand_more_black_128dp" />
             </android.support.constraint.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/trykMaalDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:background="@color/colorDisplayBackground"
+                android:paddingStart="@dimen/displayPadding"
+                android:paddingEnd="@dimen/displayPadding"
+                android:text="00"
+                android:textColor="@color/colorDisplayGreen"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/clTrykKnapper"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -360,8 +391,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="@color/colorDisplayBackground"
+                android:paddingStart="@dimen/displayPadding"
+                android:paddingEnd="@dimen/displayPadding"
                 android:text="00.0"
                 android:textAlignment="center"
+                android:textColor="@color/colorDisplayRed"
                 android:textSize="36sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
