--- a/app/src/main/res/layout/activity_insufflator_visning.xml
+++ b/app/src/main/res/layout/activity_insufflator_visning.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".InsufflatorVisningActivity">
 
-    <fragment
-        android:name="gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.VisningAfventerFragment"
+    <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
