--- a/app/src/main/res/layout/activity_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/activity_vaelg_scenarie.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/vaelg_scenarie_overskrift"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:maxLines="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
