--- a/app/src/main/res/layout/activity_show_logs.xml
+++ b/app/src/main/res/layout/activity_show_logs.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowLogsActivity">
+    tools:context=".activities.ShowLogsActivity">
 
     <TextView
         android:id="@+id/showLogsHeader"
