--- a/app/src/main/res/layout/activity_vaelg_opgave.xml
+++ b/app/src/main/res/layout/activity_vaelg_opgave.xml
@@ -5,7 +5,7 @@
     android:id="@+id/clMainVaelgOpgave"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VaelgOpgaveActivity">
+    tools:context=".activities.VaelgOpgaveActivity">
 
     <TextView
         android:id="@+id/textView5"
