--- a/app/src/main/res/layout/activity_vaelg_opgave.xml
+++ b/app/src/main/res/layout/activity_vaelg_opgave.xml
@@ -47,7 +47,7 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/constraint_border"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/clForbinTTablet"
+            app:layout_constraintEnd_toStartOf="@+id/clTablet"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -84,7 +84,7 @@
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/clForbinTTablet"
+            android:id="@+id/clTablet"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
@@ -99,7 +99,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/tvForbindTTabletTitel"
+                android:id="@+id/tvTabletTitel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -115,7 +115,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvforbindTTabletText"
+                android:id="@+id/tvTabletText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -127,7 +127,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.25"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvForbindTTabletTitel" />
+                app:layout_constraintTop_toBottomOf="@+id/tvTabletTitel" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
