--- a/app/src/main/res/layout/adapter_vaelg_tablet.xml
+++ b/app/src/main/res/layout/adapter_vaelg_tablet.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/background_tablet_liste_element"
     tools:context="adapters.VaelgTabletsRecyleViewAdapter">
 
@@ -23,7 +23,7 @@
             android:id="@+id/tablet_liste_element_LED"
             android:layout_width="20dp"
             android:layout_height="21dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +34,7 @@
             android:id="@+id/tablet_liste_element_ID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:textSize="26sp"
@@ -47,7 +47,7 @@
             android:id="@+id/tablet_liste_element_valgBrugs"
             android:layout_width="158dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="136dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/tablet_knap"
@@ -62,7 +62,7 @@
             android:id="@+id/tablet_liste_element_selog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/tablet_knap"
@@ -77,15 +77,13 @@
             android:id="@+id/tablet_liste_element_slet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/tablet_knap"
             android:text="@string/tablet_liste_element_slet"
             android:textColor="#000"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tablet_liste_element_selog"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
