--- a/app/src/main/res/drawable/rund_knap.xml
+++ b/app/src/main/res/drawable/rund_knap.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="#F0F0F0"/>
+    <stroke android:width="2dip" android:color="#3366cc" />
 
 </shape>
