--- a/app/src/main/res/layout/activity_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/activity_vaelg_scenarie.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/baggrund"
     tools:context=".activities.VaelgScenarieActivity">
 
     <TextView
@@ -23,7 +24,7 @@
         android:id="@+id/linie"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
+        android:background="#3366cc"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
