--- a/app/src/main/res/layout/fragment_insufflator.xml
+++ b/app/src/main/res/layout/fragment_insufflator.xml
@@ -71,7 +71,7 @@
             android:id="@+id/clGasforsyning"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/constraint_border"
+            android:background="@drawable/knap_kanter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clTryk"
             app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:background="@drawable/constraint_border"
+                android:background="@drawable/knap_kanter"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
@@ -151,7 +151,7 @@
             android:id="@+id/clFlowrate"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/constraint_border"
+            android:background="@drawable/knap_kanter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clVolumen"
             app:layout_constraintStart_toEndOf="@+id/clTryk"
@@ -259,7 +259,7 @@
             android:id="@+id/clTryk"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/constraint_border"
+            android:background="@drawable/knap_kanter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clFlowrate"
             app:layout_constraintStart_toEndOf="@+id/clGasforsyning"
@@ -369,7 +369,7 @@
             android:id="@+id/clVolumen"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/constraint_border"
+            android:background="@drawable/knap_kanter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/clFlowrate"
