--- a/app/src/main/res/layout/activity_vaelg_rolle.xml
+++ b/app/src/main/res/layout/activity_vaelg_rolle.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:longClickable="false"
+    android:background="@drawable/baggrund"
     tools:context=".activities.VaelgRolleActivity">
 
     <TextView
@@ -44,7 +45,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/constraint_border"
+            android:background="@drawable/knap_kanter"
             android:elevation="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +95,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/constraint_border"
+            android:background="@drawable/knap_kanter"
             android:elevation="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clInstruktor"
