--- a/app/src/main/res/layout/adapter_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/adapter_vaelg_scenarie.xml
@@ -12,7 +12,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorLightGray"
         android:text="@string/scenarie_dummy_navn"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +26,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorYellow"
+        android:background="@drawable/redigere"
         android:text="@string/rediger"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +41,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorRed"
+        android:background="@drawable/slet"
         android:text="@string/slet"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
         app:layout_constraintBottom_toBottomOf="parent"
