Added communication object

--- a/app/src/main/res/layout/activity_vaelg_tablet.xml
+++ b/app/src/main/res/layout/activity_vaelg_tablet.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/baggrund"
+    android:keepScreenOn="true"
     tools:context=".activities.VaelgScenarieActivity">
 
     <TextView
